fix: add font swap to fix Ensure text remains visible during webfont load

--- a/docs/static/css/style.css
+++ b/docs/static/css/style.css
@@ -3,6 +3,7 @@
   font-style: normal;
   font-weight: 400;
   src: url("../fonts/HKGrotesk-Regular.woff") format("woff");
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   font-style: normal;
   font-weight: 400;
   src: url("../fonts/Jost-Regular.ttf") format("woff");
+  font-display: swap;
 }
 
 :root {
